--- a/dev/views/config/config.pug
+++ b/dev/views/config/config.pug
@@ -3,7 +3,7 @@
 -const sandwiches = ['mixto', 'pollo', 'tintero', 'vegetal', 'especial']
 -const guitars = ['jamón', 'pollo', 'lomo', 'tortilla + jamón']
 -const baguettes = ['baguette vegetal', 'baguette atún', 'baguette jamón', 'baguette pollo', 'baguette bacon + queso', 'baguette tortilla francesa', 'baguette tortilla + jamón', 'baguette magreta', 'baguette lomo', 'baguette lomo fresco', 'baguette calamares', 'baguette salchichas', 'baguette especial']
--const pizzas = ['margarita', 'campera', 'carne picada', 'cangrejo', 'bacon', 'kebab', 'frankfurt', 'cuatro quesos', 'pollo y bacon', 'mini-pizza']
+-const pizzas = ['margarita', 'campera', 'carne picada (BBQ)', 'cangrejo', 'bacon', 'kebab', 'frankfurt', 'cuatro quesos', 'pollo y bacon', 'mini-pizza']
 -const paninis = ['panini york', 'panini serrano', 'panini bacon', 'panini cangrejo', 'panini BBQ']
 -const hotDogs = ['perrito caliente']
 -const kebabs = ['pollo']
@@ -23,7 +23,7 @@
 -const pricePaninis = ['2,00€', '2,00€', '2,00€', '2,00€', '2,00€']
 -const priceHotDogs = ['2,00€']
 -const priceKebabs = ['3,00€']
--const priceStarters = ['2,00€', '2,00€', '2,00€', '2,00€', '5,00€', '3,00€', '5,00€', '3,00€']
+-const priceStarters = ['2,00€', '2,00€', '2,00€', '2,00€', '6,00€', '3,00€', '6,00€', '3,00€']
 -const priceChips = ['3,50€', '3,50€', '3,50€', '3,50€', '3,50€']
 -const priceWaffles = ['2,20€', '3,20€']
 -const priceCrepes = ['2,00€', '3,00€', '2,00€', '3,00€', '3,00€', '3,00€']
@@ -32,13 +32,13 @@
 
 //-Ingredients Burgers
 -const normalBurgerIngredients = ['tomate', 'lechuga', 'cebolla']
--const crispyCukysBurgerIngredients = ['ingredientes']
+-const crispyCukysBurgerIngredients = ['lechuga', 'tomate', 'mahonesa', '+Extras 0,30€']
 -const eggBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'huevo']
 -const baconBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'bacon']
 -const cheeseBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'queso']
 -const superBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'huevo', 'bacon', 'queso']
--const premiumBovineBurgerIngredients = ['lechuga', 'tomate', 'cebolla', 'ternera']
--const burgerXLBurgerIngredients = ['doble carne', 'lechuga', 'tomate', 'cebolla']
+-const premiumBovineBurgerIngredients = ['lechuga', 'tomate', 'cebolla', 'ternera', '+Extras 0,30€']
+-const burgerXLBurgerIngredients = ['doble carne', 'lechuga', 'tomate', 'cebolla', '+Extras 0,30€']
 
 //-Ingredients Sandwiches
 -const mixSandwichIngredients = ['jamón york', 'queso']
@@ -89,6 +89,9 @@
 
 //-Ingredients hot dog
 -const hotDogIngredients = ['queso', 'patatas', 'mostaza', 'cebolla', 'mahonesa', 'kétchup']
+
+//-Ingredients kebab
+-const kebabIngredients = ['pollo', 'salsa kebab', 'remolacha', 'zanahoria', 'lechuga', 'tomate']
 
 //-Flavors ice cream
 -const iceCreamsFlavors = ['nata con nueces', 'fresa', 'straciatella', 'tarta de queso', 'milhojas', 'turrón', 'kinder', 'donette', 'oreo', 'vainilla', 'leche merengada', 'tres chocolates', 'chocolate blanco con conguitos']
