--- a/dev/views/includes/baguette-ingredients.pug
+++ b/dev/views/includes/baguette-ingredients.pug
@@ -12,7 +12,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette vegetal +Bebida +Patatas
                 p 4,30€
                 .ingredients__img
@@ -33,7 +33,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de atún +Bebida +Patatas
                 p 4,30€
                 .ingredients__img
@@ -51,7 +51,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de jamón +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -69,7 +69,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de pollo +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -88,7 +88,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de bacon y queso +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -107,7 +107,7 @@
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de tortilla francesa +Bebida +Patatas
                 p 4,30€
                 .ingredients__img
@@ -126,7 +126,7 @@
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de tortilla y jamón +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -144,7 +144,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de magreta +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -162,7 +162,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de lomo +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -180,7 +180,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de lomo fresco +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -199,7 +199,7 @@
             img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de calamares +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -215,10 +215,9 @@
         center
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
-            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette de salchichas +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
@@ -234,10 +233,10 @@
         center
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
-            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Baguette especial +Bebida +Patatas
                 p 4,50€
                 .ingredients__img
