--- a/dev/views/includes/burger-ingredients.pug
+++ b/dev/views/includes/burger-ingredients.pug
@@ -24,6 +24,10 @@
             li= crispyCukysIngredients
         center
             h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
                 p Hamburguesa Crispy-Cukys +Bebida +Patatas
@@ -120,6 +124,9 @@
             li= premiumBovineIngredients
         center
             h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
                 p Hamburguesa premium vacuno +Bebida +Patatas
@@ -136,6 +143,9 @@
             li= burgerXLIngredients
         center
             h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
                 p Hamburguesa XL +Bebida +Patatas
