--- a/dev/views/includes/starters-allergens.pug
+++ b/dev/views/includes/starters-allergens.pug
@@ -5,7 +5,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Nuggets +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -21,7 +21,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Croquetas +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -37,7 +37,7 @@
             img.ingredients__allergen(src='assets/img/gallery/fish.svg' alt='fish')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Empanadillas +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -53,7 +53,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p San jacobos +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -66,50 +66,58 @@
         center
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
-            img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Twister +Bebida +Patatas
-                p 6,50€
+                p 7,00€
                 .ingredients__img
                     img(src="assets/img/fried-min.png")
                     img(src="assets/img/drink-min.png")
                     img(src="assets/img/chips-min.png")
 
+#fingers-starter-allergens.lightbox
+    .ingredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h3 Con menú:
+                p Fingers +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
+#torpedo-starter-allergens.lightbox
+    .ingredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
 
+            h3 Con menú:
+                p Torpedo +Bebida +Patatas
+                p 7,00€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
-//#fingers-starter-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Fingers +Bebida +Patatas
-//            p 4,50€
-//            .ingredients__img
-//                img(src="assets/img/fried-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
-//
-//#torpedo-starter-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Torpedo +Bebida +Patatas
-//            p 6,50€
-//            .ingredients__img
-//                img(src="assets/img/fried-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
-//
-//#chickendelicacies-starter-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Delicias de pollo +Bebida +Patatas
-//            p 4,50€
-//            .ingredients__img
-//                img(src="assets/img/fried-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
+#chickendelicacies-starter-allergens.lightbox
+    .ingredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
+
+            h3 Con menú:
+                p Delicias de pollo +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
