--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -24,6 +24,7 @@ html(lang="es")
         include ../includes/panini-ingredients
         include ../includes/hotdog-ingredients
         include ../includes/starters-allergens
+        include ../includes/chips-allergens
         include ../includes/kebab-menus
         include ../includes/icecream-flavors
         main.main
