--- a/dev/views/includes/guitar-ingredients.pug
+++ b/dev/views/includes/guitar-ingredients.pug
@@ -8,7 +8,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Guitarra de jamón +Bebida +Patatas
                 p 5,00€
                 .ingredients__img
@@ -26,7 +26,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Guitarra de pollo +Bebida +Patatas
                 p 5,00€
                 .ingredients__img
@@ -44,7 +44,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Guitarra de lomo +Bebida +Patatas
                 p 5,00€
                 .ingredients__img
@@ -63,7 +63,7 @@
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Guitarra tortilla jamón +Bebida +Patatas
                 p 5,00€
                 .ingredients__img
