--- a/dev/views/config/config.pug
+++ b/dev/views/config/config.pug
@@ -74,11 +74,11 @@
 -const mincePizzaIngredients = ['tomate', 'carne picada', 'queso']
 -const crabPizzaIngredients = ['tomate', 'atún', 'queso', 'palitos de cangrejo']
 -const baconPizzaIngredients = ['tomate', 'bacon', 'queso']
-//- -const kebabPizzaIngredients = []
-//- -const frankfurtPizzaIngredients = []
-//- -const fourCheesePizzaIngredients = []
-//- -const baconChickenPizzaIngredients = []
-//- -const miniPizzaIngredients = []
+-const kebabPizzaIngredients = ['ingredientes']
+-const frankfurtPizzaIngredients = ['ingredientes']
+-const fourCheesePizzaIngredients = ['ingredientes']
+-const baconChickenPizzaIngredients = ['ingredientes']
+-const miniPizzaIngredients = ['ingredientes']
 
 //-Ingredients paninis
 -const yorkPaniniIngredients = ['tomate', 'queso', 'jamón york']
