--- a/dev/views/includes/pizza-ingredients.pug
+++ b/dev/views/includes/pizza-ingredients.pug
@@ -9,7 +9,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Pizza margarita +Bebida +Patatas
                 p 5,50€
                 .ingredients__img
@@ -28,7 +28,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Pizza campera +Bebida +Patatas
                 p 5,50€
                 .ingredients__img
@@ -47,7 +47,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Pizza de carne picada +Bebida +Patatas
                 p 5,50€
                 .ingredients__img
@@ -68,7 +68,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Pizza de cangrejo +Bebida +Patatas
                 p 5,50€
                 .ingredients__img
@@ -87,7 +87,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Pizza de bacon +Bebida +Patatas
                 p 5,50€
                 .ingredients__img
@@ -95,58 +95,97 @@
                     img(src="assets/img/drink-min.png")
                     img(src="assets/img/chips-min.png")
 
+#kebab-pizza-ingredients.lightbox
+    ul.ingredients
+        h3 Ingredientes pizza de kebab:
+        each kebabIngredients in kebabPizzaIngredients
+            li= kebabIngredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-//#kebab-pizza-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Pizza de kebab +Bebida +Patatas
-//            p 5,50€
-//            .ingredients__img
-//                img(src="assets/img/pizza-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
-//
-//#frankfurt-pizza-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Pizza de frankfurt +Bebida +Patatas
-//            p 5,50€
-//            .ingredients__img
-//                img(src="assets/img/pizza-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
-//
-//#fourcheese-pizza-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Pizza cuatro quesos +Bebida +Patatas
-//            p 5,50€
-//            .ingredients__img
-//                img(src="assets/img/pizza-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
-//
-//#chickenbacon-pizza-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Pizza de pollo y bacon +Bebida +Patatas
-//            p 5,50€
-//            .ingredients__img
-//                img(src="assets/img/pizza-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
-//
-//#mini-pizza-menu.lightbox
-//    .ingredients
-//        center
-//            h4 Menú:
-//            p Mini-Pizza +Bebida +Patatas
-//            p 3,50€
-//            .ingredients__img
-//                img(src="assets/img/pizza-min.png")
-//                img(src="assets/img/drink-min.png")
-//                img(src="assets/img/chips-min.png")
+            h3 Con menú:
+                p Pizza de kebab +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
+#frankfurt-pizza-ingredients.lightbox
+    ul.ingredients
+        h3 Ingredientes pizza de frankfurt:
+        each frankfurtIngredients in frankfurtPizzaIngredients
+            li= frankfurtIngredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h3 Con menú:
+                p Pizza de frankfurt +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
+#fourcheese-pizza-ingredients.lightbox
+    ul.ingredients
+        h3 Ingredientes pizza de cuatro quesos:
+        each fourCheeseIngredients in fourCheesePizzaIngredients
+            li= fourCheeseIngredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h3 Con menú:
+                p Pizza de cuatro quesos +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
+#chickenbacon-pizza-ingredients.lightbox
+    ul.ingredients
+        h3 Ingredientes pizza de pollo y bacon:
+        each chickenBaconIngredients in chickenBaconPizzaIngredients
+            li= chickenBaconIngredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h3 Con menú:
+                p Pizza de pollo y bacon +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
+#mini-pizza-ingredients.lightbox
+    ul.ingredients
+        h3 Ingredientes mini-pizza:
+        each miniIngredients in miniPizzaIngredients
+            li= miniIngredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h3 Con menú:
+                p Pizza mini-pizza +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
