--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -164,20 +164,18 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 
 
 .products__items .item3 { font-size: .6rem; float: right; margin-top: .25rem; margin-right: .2rem; }
 
-.products__items .item4 { cursor: pointer; background-color: var(--primary-color); color: var(--text-color); padding: .23rem .3rem; border-radius: 15px; font-size: .6rem; float: right; }
-
 .products__items .flavors { float: left; margin-left: .5rem; }
 
 .products__items .products__image { text-align: center; }
 
 @media screen and (min-width: 700px) { .products__items { display: grid; grid-template-columns: 4fr 1fr; }
   .products__items li { font-size: 1.1rem; }
-  .products__items .item2, .products__items .item4 { font-size: .7rem; margin-top: .02rem; }
+  .products__items .item2 { font-size: .7rem; margin-top: .02rem; }
   .products__items .item3 { font-size: 1rem; }
   .products__items .products__image { align-self: center; justify-content: center; } }
 
 @media screen and (min-width: 1024px) { .products__items li { font-size: 1.2rem; }
-  .products__items .item2, .products__items .item4 { font-size: .8rem; margin-top: 0; } }
+  .products__items .item2 { font-size: .8rem; margin-top: 0; } }
 
 .lightbox { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); color: var(--text-color); z-index: 1000; display: flex; justify-content: center; align-items: center; transform: scale(0); transition: transform 0.3s; }
 
