--- a/dev/views/config/config.pug
+++ b/dev/views/config/config.pug
@@ -11,7 +11,7 @@
 -const chips = ['ali-oli', 'bravas', 'rancheras', 'bacon-chedar', 'salchipapas']
 -const waffles = ['nutella y nata montada', 'helado, nutella y nata montada']
 -const crepes = ['nutella y nata montada', 'helado, chocolate y nata', 'chocolate blanco y nutella', 'piña, chocolate blanco y nata', 'melocotón, nutella y nata', 'york y queso']
--const iceCreams = ['tarrina pequeña', 'tarrila grande', 'copa 2 bolas', 'copa 3 bolas', 'blanco y negro', 'granizado', 'batidos']
+-const iceCreams = ['tarrina pequeña', 'tarrina grande', 'copa 2 bolas', 'copa 3 bolas', 'blanco y negro', 'granizado', 'batidos']
 -const drinks = ['refrescos', 'agua', 'cervezas', 'combinados']
 
 //-Price products
