--- a/dev/views/includes/footer.pug
+++ b/dev/views/includes/footer.pug
@@ -1,3 +1,8 @@
-.footer__items
-    p © Cuky's 2020 | Created by @JoseMariaMQ 
-        i.fab.fa-github
+.footer-items
+    p © Cuky's 2020 | Diseñado y desarrollado por JoseMariaMQ
+        a(href="https://github.com/JoseMariaMQ" target="_blank").footer-items__links
+            i.fab.fa-github
+        a(href="https://www.linkedin.com/in/josemariamq/" target="_blank").footer-items__links
+            i.fab.fa-linkedin-in
+        a(href="https://twitter.com/JoseMariaMQ" target="_blank").footer-items__links
+            i.fab.fa-twitter
