--- a/dev/views/includes/pizza-ingredients.pug
+++ b/dev/views/includes/pizza-ingredients.pug
@@ -152,10 +152,10 @@
                     img(src="assets/img/drink-min.png")
                     img(src="assets/img/chips-min.png")
 
-#chickenbacon-pizza-ingredients.lightbox
+#baconchicken-pizza-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes pizza de pollo y bacon:
-        each chickenBaconIngredients in chickenBaconPizzaIngredients
+        each baconChickenIngredients in baconChickenPizzaIngredients
             li= chickenBaconIngredients
         center
             h4 Alérgenos:
