--- a/dev/views/includes/sandwich-ingredients.pug
+++ b/dev/views/includes/sandwich-ingredients.pug
@@ -9,7 +9,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Sandwich mixto +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -27,7 +27,7 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Sandwich de pollo +Bebida +Patatas
                 p 4,00€
                 .ingredients__img
@@ -46,7 +46,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Sandwich tintero +Bebida +Patatas
                 p 4,00€
                 .ingredients__img
@@ -68,7 +68,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Sandwich vegetal +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -88,7 +88,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Sandwich especial +Bebida +Patatas
                 p 4,00€
                 .ingredients__img
