--- a/dev/scss/blocks/_footer.scss
+++ b/dev/scss/blocks/_footer.scss
@@ -7,7 +7,13 @@
   border-top: 2px solid rgba(255, 255, 255, 0.4);
   color: $dark-color2;
 
-  &__items {
+  &-items {
     display: block;
+
+    &__links {
+      margin: 0 .25rem;
+      text-decoration: none;
+      color: inherit;
+    }
   }
 }
