--- a/dev/views/includes/hotdog-ingredients.pug
+++ b/dev/views/includes/hotdog-ingredients.pug
@@ -10,7 +10,7 @@
             img.ingredients__allergen(src='assets/img/gallery/mustard.svg' alt='mustard')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Perrito caliente +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
