--- a/dev/views/includes/panini-ingredients.pug
+++ b/dev/views/includes/panini-ingredients.pug
@@ -9,7 +9,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Panini york +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -28,7 +28,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Panini serrano +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -47,7 +47,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Panini bacon +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -64,9 +64,11 @@
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/fish.svg' alt='fish')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Panini crangrejo +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
@@ -85,7 +87,7 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-            h4 Menú:
+            h3 Con menú:
                 p Panini BBQ +Bebida +Patatas
                 p 3,50€
                 .ingredients__img
