--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -25,7 +25,10 @@ html(lang="es")
         include ../includes/hotdog-ingredients
         include ../includes/starters-allergens
         include ../includes/chips-allergens
-        include ../includes/kebab-menus
+        include ../includes/kebab-ingredients
+        include ../includes/waffle-allergens
+        include ../includes/crepe-allergens
+        include ../includes/icecream-allergens
         include ../includes/icecream-flavors
         main.main
             block products
